# routes/api.php
@@ -9,6 +9,7 @@ use App\Http\Controllers\Api\V1\PermissionController;
 use App\Http\Controllers\Api\V1\UserPermissionController;
 use App\Http\Controllers\Api\V1\PostCategoryController;
 use App\Http\Controllers\Api\V1\TagController;
+use App\Http\Controllers\Api\V1\MediaController;
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -39,6 +40,7 @@ Route::prefix('v1')->middleware(['apiMiddleware','verify_header'])->group(functi
     Route::apiResource('user-menus', UserPermissionController::class);
     Route::apiResource('post-categories', PostCategoryController::class);
     Route::apiResource('tags', TagController::class);
+    Route::apiResource('medias', MediaController::class);
     Route::post('logout', [LoginController::class, 'logout']);
 
 
